[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Loc Tran <ducloc0009@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.10.2"
bcrypt = "4.0.1"
black = "23.1.0"
click = "8.1.3"
colorama = "0.4.6"
flask = "2.2.3"
flask-cors = "3.0.10"
flask-marshmallow = "0.14.0"
flask-migrate = "4.0.4"
flask-sqlalchemy = "3.0.3"
greenlet = "2.0.2"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.2.4"
markupsafe = "2.1.2"
marshmallow-sqlalchemy = "0.29.0"
mypy-extensions = "1.0.0"
packaging = "23.0"
pathspec = "0.11.1"
platformdirs = "3.1.1"
pydantic = "1.10.7"
pyjwt = "2.6.0"
python-dotenv = "1.0.0"
six = "1.16.0"
sqlalchemy = "2.0.7"
typing-extensions = "4.5.0"
werkzeug = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
